Fix enter key in header on mobile.

--- a/site/styles-bundle.css
+++ b/site/styles-bundle.css
@@ -1035,6 +1035,10 @@ main > .post {
   top: 0px;
 }
 
+.z-\[10\] {
+  z-index: 10;
+}
+
 .z-\[50\] {
   z-index: 50;
 }
